--- a/html/huankuan.html
+++ b/html/huankuan.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="mui-content box" style="background: #ffffff;">
 			<div class="peixun">
-				<p id="guding">培训分期</p>
+				<p>培训分期</p>
 				<p>申请金额:19300 申请期限 12+12个月</p>
 			</div>
 			<div class="main">
@@ -67,6 +67,7 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/jquery-1.11.1.min.js" ></script>
+		<!--<script type="text/javascript" src="../js/peixunfenqi.js" ></script>-->
 		<script type="text/javascript">
 			var totalcount = document.getElementById("totalcount");
 			totalcount.addEventListener("tap",function(){
