--- a/html/kuankuanzi/totalcount.html
+++ b/html/kuankuanzi/totalcount.html
@@ -113,6 +113,7 @@
 		   
 		</nav>
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/peixunfenqi.js" ></script>
 		<script type="text/javascript">
 			(function($){
       		$('.mui-scroll-wrapper').scroll({     			
@@ -120,6 +121,7 @@
       			indicators:true,
       		});
       	})(mui);
+      	
       	var tiqianjq = document.getElementById("tiqianjq");
       	tiqianjq.addEventListener("tap",function(){
       		mui.openWindow({
