--- a/html/shouye.html
+++ b/html/shouye.html
@@ -15,50 +15,156 @@
 	</head>
 
 	<body>
-		<!--大盒子-->
-		<div class="mui-content box" style="background: #FFFFFF;" id="refreshContainer">	
-			<!--融易分期-->
-			<div class="easyfQ">
-				<p>融易分期</p>
-			</div>
-			<!--提高警惕-->
-			<div class="tigao">
-				<img src="../img/iocn.png" style="width: 30px; margin-left: 10%; margin-top: 10px;"/>
-				<span>提高警惕,警方诈骗!</span>
-			</div>
-			<!--分期-->
-			<div class="fenqi">
-				<ul>
-					<li class="fenqi_word">
-						<div>
-							<dl>
-								<dt id="peixunfq">培训分期</dt>
-								<dd>先就业后付款</dd>
-								<dd>流程简单,极速审批</dd>
-							</dl>
+		<div class="mui-content" style=" height: 666px;">
+		    <div class="swiper-container">
+		      <div class="swiper-wrapper">
+		          <div class="swiper-slide">
+		          	<!--融易分期-->
+						<div class="easyfQ">
+							<p>融易分期</p>
 						</div>
-						<div>
-							<p><img src="../img/zhou.jpg"></p>
+						<!--提高警惕-->
+						<div class="tigao">
+							<img src="../img/iocn.png" style="width: 30px; margin-left: 10%; margin-top: 10px;"/>
+							<span>提高警惕,警方诈骗!</span>
 						</div>
-					</li>
-					<li class="fenqi_word">
-						<div>
-							<dl>
-								<dt>培训分期</dt>
-								<dd>先就业后付款</dd>
-								<dd>流程简单,极速审批</dd>
-							</dl>
+						<!--分期-->
+						<div class="fenqi">
+							<ul>
+								<li class="fenqi_word">
+									<div>
+										<dl>
+											<dt id="peixunfq">培训分期</dt>
+											<dd>先就业后付款</dd>
+											<dd>流程简单,极速审批</dd>
+										</dl>
+									</div>
+									<div>
+										<p><img src="../img/zhou.jpg"></p>
+									</div>
+								</li>
+								<li class="fenqi_word">
+									<div>
+										<dl>
+											<dt>培训分期</dt>
+											<dd>先就业后付款</dd>
+											<dd>流程简单,极速审批</dd>
+										</dl>
+									</div>
+									<div>
+										<p><img src="../img/ka.jpg"></p>
+									</div>
+								</li>
+							</ul>
 						</div>
-						<div>
-							<p><img src="../img/ka.jpg"></p>
+		          </div>
+		          <div class="swiper-slide">
+			          	<div class="peixun">
+							<p id="guding">培训分期</p>
+							<p>申请金额:19300 申请期限 12+12个月</p>
 						</div>
-					</li>
-				</ul>
-			</div>
+						<div class="main">
+							<div class="main_top">
+								<ul>
+									<li>6/24期</li>
+									<li>
+										<ul>
+											<li>本期应还</li>
+											<li>¥96.50</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="main_center">
+								<ul>
+									<li class="main_center_main">
+										<ul>
+											<li>还款日期</li>
+											<li>2019.05.05</li>
+										</ul>
+									</li>
+									<li class="main_center_main">
+										<ul>
+											<li>银行卡</li>
+											<li>建设银行****1485</li>
+										</ul>
+									</li>
+									<li class="main_center_main">
+										<ul>
+											<li>还款方式</li>
+											<li>还款日天16:00自动扣款或当天0:00-24:00主动还款</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="main_button">
+								<p>立即还款</p>
+								<ul>
+									<li>还款历史</li>
+									<li>|</li>
+									<li id="totalcount">全部账单</li>
+								</ul>
+							</div>
+						</div>
+						<p class="button">当期补贴18.94元于还款前一天打入你的银行卡</p>
+				  </div>
+		          <div class="swiper-slide">
+		          	<ul class="wodeTop">
+				    	<li>
+				    		<ul>
+				    			<li>您好</li>
+				    			<li>147****2516</li>
+				    		</ul>
+				    	</li>
+				    	<li><img src="../img/penper.png"></li>
+				    </ul>
+				    <div class="wodeMain">
+				    	<ul>
+				    		<li class="wodeMain_li">
+				    			<ul>
+				    				<li>实名认证<span class="yirenz">已认证</span></li>
+				    				<li><span class="iconfont icon-shimingrenzheng"></span></li>
+				    			</ul>
+				    		</li>
+				    		<li style="width: 90%; margin: 0 auto; height: 1px; background: #DDDDDD; opacity: 0.5;"></li>
+				    		<li class="wodeMain_li">
+				    			<ul>
+				    				<li>我的订单</li>
+				    				<li><span class="iconfont icon-wodedingdan"></span></li>
+				    			</ul>
+				    		</li>
+				    		<li style="width: 90%; margin: 0 auto; height: 1px; background: #DDDDDD; opacity: 0.5;"></li>
+				    		<li class="wodeMain_li">
+				    			<ul>
+				    				<li>我的银行卡</li>
+				    				<li><span class="iconfont icon-yinhangqia"></span></li>
+				    			</ul>
+				    		</li>
+				    		<li style="width: 90%; margin: 0 auto; height: 1px; background: #DDDDDD; opacity: 0.5;"></li>
+				    		<li class="wodeMain_li">
+				    			<ul>
+				    				<li id="help">帮助与客服</li>
+				    				<li><span class="iconfont icon-xiaoxi"></span></li>
+				    			</ul>
+				    		</li>
+				    		<li style="width: 90%; margin: 0 auto; height: 1px; background: #DDDDDD; opacity: 0.5;"></li>
+				    		<li class="wodeMain_li">
+				    			<ul>
+				    				<li>设置</li>
+				    				<li><span class="iconfont icon-shezhi"></span></li>
+				    			</ul>
+				    		</li>
+				    		<li style="width: 90%; margin: 0 auto; height: 1px; background: #DDDDDD; opacity: 0.5;"></li>
+				    	</ul>
+				    </div>
+				 </div>
+			  </div>
+  			</div>
 		</div>
-		<!--大盒子结束-->
 		<!--js部分-->
 		<script src="../js/mui.min.js"></script>
+		<script type="text/javascript" src="../js/swiper.min.js" ></script>
+		<script type="text/javascript" src="../js/peixunfenqi.js" ></script>
 		<script type="text/javascript">
 //			弹性窗口
 //		(function($){
@@ -67,14 +173,18 @@
 //			indicators:true,
 //	      		});
 //	      	})(mui);
-//	      	点击跳转
-	      	var peixunfq = document.getElementById("peixunfq");
-	      	console.log(peixunfq);
-	      	peixunfq.addEventListener("tap",function(){
-	      		mui.openWindow({
-	      			url:"shouyezi/feiqi.html",
-	      		})
-	      	})
+//		点击我的页帮助与客服
+			var help = document.getElementById("help");
+			help.addEventListener("tap",function(){
+				mui.openWindow({
+					url:"wodezi/helpyukefu.html",
+				})
+			})
+//			循环
+			 var swiper = new Swiper('.swiper-container', {
+	       loop: true,
+	      	effect:"coverflow"
+	   });
 //	      	刷新
 			mui.init({
 				pullRefresh:{
